--- a/flux-clusters/dev-cluster/2-demo-git.yml
+++ b/flux-clusters/dev-cluster/2-demo-git.yml
@@ -8,4 +8,4 @@ spec:
   interval: 1m0s
   ref:
     branch: 2-demo
-  url: https://github.com/jtrnegi/k8s.git
+  url: https://github.com/jtrnegi/bb-app-source.git
